--- a/index.html
+++ b/index.html
@@ -11,7 +11,46 @@
 
     <header>
     
+    <div class="liens">
 
+        <a href="index.html">Accueil</a>
+
+        <a href="">Les films</a>
+
+        <a href="">Contact</a>
+
+    </div>
+
+    <main>
+
+            <div class="titre">
+        <h1>Cinéma</h1>
+        <h2>Les grands classiques</h2>
+    </div>
+
+    <div class="affiche-accueil">
+
+        <a href="fight-club.html"><img src="assets/images/fight-club.jpg" alt="fight-club">
+        </a>
+
+        <a href="la-ligne-verte.html"> <img src="assets/images/la-ligne-verte.jpg" alt="la-ligne-verte">
+        </a>
+
+        <a href="scarface.html"><img src="assets/images/scarface.jpg" alt="scarface">
+        </a>
+
+        <a href="pulp-fiction.html"><img src="assets/images/pulp-fiction.jpg" alt="pulp-fiction">
+        </a>
+
+        <a href="edward-aux-mains-dargent.html"><img src="assets/images/edward.jpg" alt="edward-aux-mains-dargent">
+        </a>
+
+        <a href="psychose.html"><img src="assets/images/psychose.jpg" alt="psychose">
+        </a>
+
+    </div>
+
+    </main>
 
     </header>
 
