--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <main>
 
+    <div class="background" >
+
             <div class="titre">
         <h1>Cinéma</h1>
         <h2>Les grands classiques</h2>
@@ -57,6 +59,17 @@
 
     <footer>
 
+    <div class="liens">
+
+        <a href="index.html">Accueil</a>
+
+        <a href="">Les films</a>
+
+        <a href="">Contact</a>
+
+    </div>
+
+    </div>
 
     </footer>
 
