--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
     <link rel="stylesheet" href="assets/fansite.css">
 </head>
 
-<body>
+    <body>
 
-    <header>
+    <header class="header">
     
-    <div class="liens">
+        <h1>La page des cinéphiles</h1>    
 
+    </header>
+
+
+
+    <nav class="liens" >
         <a href="index.html">Accueil</a>
 
         <a href="">Les films</a>
 
         <a href="">Contact</a>
+    </nav>
 
-    </div>
+    <div class="body">
 
     <main>
 
@@ -54,9 +60,6 @@
 
     </main>
 
-    </header>
-
-
     <footer>
 
     <div class="liens">
@@ -69,9 +72,9 @@
 
     </div>
 
-    </div>
-
     </footer>
+
+    </div>
 
 </body>
 
