--- a/fight-club.html
+++ b/fight-club.html
@@ -12,7 +12,23 @@
 
     <header class="header">
 
-        <h1>La page des cinéphiles</h1>
+        <div class="texte-header">
+
+            <h1>La page des cinéphiles</h1>
+
+            <div class="gif1">
+
+                <img src="assets/images/vhs.gif" alt="projecteur">
+
+            </div>
+
+            <div class="gif">
+
+                <img src="assets/images/projector-12630_256.gif" alt="projecteur">
+
+            </div>
+
+        </div>
 
     </header>
 
@@ -30,36 +46,47 @@
 
         <div class="page-film">
 
-            <div class="video" >
+            <div class="video">
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/c_Sf-XY3t-I?si=r0DT5AnosrPEHJzA"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/c_Sf-XY3t-I?si=IupYJ856ErT9Dr0S&amp;start=4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
             </div>
 
-            <div class="texte-page" >
+            <div class="texte-page">
 
-            <h1>Fight Club</h1><br>
+                <h1>Fight Club</h1><br>
 
-            <h2>Synopsis</h2><br>
+                <h2>Synopsis</h2><br>
 
-            <p>Le narrateur, sans identité précise, vit seul, travaille seul, dort seul, mange seul ses plateaux-repas
-                pour une personne comme beaucoup d'autres personnes seules qui connaissent la misère humaine, morale et
-                sexuelle. C'est pourquoi il va devenir membre du Fight club, un lieu clandestin ou il va pouvoir
-                retrouver sa virilité, l'échange et la communication. Ce club est dirigé par Tyler Durden, une sorte
-                d'anarchiste entre gourou et philosophe qui prêche l'amour de son prochain.</p><br>
+                <p>Le narrateur, sans identité précise, vit seul, travaille seul, dort seul, mange seul ses
+                    plateaux-repas
+                    pour une personne comme beaucoup d'autres personnes seules qui connaissent la misère humaine, morale
+                    et
+                    sexuelle. C'est pourquoi il va devenir membre du Fight club, un lieu clandestin ou il va pouvoir
+                    retrouver sa virilité, l'échange et la communication. Ce club est dirigé par Tyler Durden, une sorte
+                    d'anarchiste entre gourou et philosophe qui prêche l'amour de son prochain.</p><br>
 
-            <h2>Distribution</h2><br>
+                <h2>Distribution</h2><br>
 
-            <p>Edward Norton, Brad Pitt, Helena Bonham Carter</p><br>
+                <p>Edward Norton, Brad Pitt, Helena Bonham Carter</p><br>
 
-            <h2>Réalisation</h2><br>
+                <h2>Réalisation</h2><br>
 
-            <p>David Fincher</p><br>
+                <p>David Fincher</p><br>
 
             </div>
+
+        </div>
+
+        <div class="distribution" >
+
+            
+
+            <img src="assets/images/edward-norton.jpg" alt="norton">
+
+            <img src="assets/images/brad-pitt.jpg" alt="pitt">
+
+            <img src="assets/images/helena-b-c.jpg" alt="carter">
 
         </div>
 
