--- a/fight-club.html
+++ b/fight-club.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/fansite.css">
 </head>
 
-<body>
+<body class="fond">
 
     <header class="header">
 
@@ -37,71 +37,126 @@
     <nav class="liens">
         <a href="index.html">Accueil</a>
 
-        <a href="">Les films</a>
+        <a href="series.html">Les séries</a>
 
         <a href="">Contact</a>
     </nav>
 
     <main>
 
+
+
         <div class="page-film">
 
-            <div class="video">
+            <div class="page-film-wrap">
+                <div class="video">
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/c_Sf-XY3t-I?si=IupYJ856ErT9Dr0S&amp;start=4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315"
+                        src="https://www.youtube.com/embed/c_Sf-XY3t-I?si=IupYJ856ErT9Dr0S&amp;start=4"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                </div>
+
+                <div class="texte-page">
+
+                    <h1>Fight Club</h1><br>
+
+                    <h2>Synopsis</h2><br>
+
+                    <p>Le narrateur, sans identité précise, vit seul, travaille seul, dort seul, mange seul ses
+                        plateaux-repas
+                        pour une personne comme beaucoup d'autres personnes seules qui connaissent la misère humaine,
+                        morale
+                        et
+                        sexuelle. C'est pourquoi il va devenir membre du Fight club, un lieu clandestin ou il va pouvoir
+                        retrouver sa virilité, l'échange et la communication. Ce club est dirigé par Tyler Durden, une
+                        sorte
+                        d'anarchiste entre gourou et philosophe qui prêche l'amour de son prochain.</p><br>
+
+                    <h2>Réalisation</h2><br>
+
+                    <p>David Fincher</p><br>
+
+                </div>
 
             </div>
 
-            <div class="texte-page">
 
-                <h1>Fight Club</h1><br>
+            <div class="distribution">
 
-                <h2>Synopsis</h2><br>
+                <h2>Distribution</h2>
 
-                <p>Le narrateur, sans identité précise, vit seul, travaille seul, dort seul, mange seul ses
-                    plateaux-repas
-                    pour une personne comme beaucoup d'autres personnes seules qui connaissent la misère humaine, morale
-                    et
-                    sexuelle. C'est pourquoi il va devenir membre du Fight club, un lieu clandestin ou il va pouvoir
-                    retrouver sa virilité, l'échange et la communication. Ce club est dirigé par Tyler Durden, une sorte
-                    d'anarchiste entre gourou et philosophe qui prêche l'amour de son prochain.</p><br>
+                <div class="section-distribution">
 
-                <h2>Distribution</h2><br>
+                    <div class="acteurs">
 
-                <p>Edward Norton, Brad Pitt, Helena Bonham Carter</p><br>
+                        <img src="assets/images/edward-norton.jpg" alt="norton">
 
-                <h2>Réalisation</h2><br>
+                        <p>Edward Norton</p>
 
-                <p>David Fincher</p><br>
+                    </div>
+
+                    <div class="acteurs">
+
+                        <img src="assets/images/brad-pitt.jpg" alt="pitt">
+
+                        <p>Brad Pitt</p>
+
+                    </div>
+
+                    <div class="acteurs">
+
+                        <img src="assets/images/helena-b-c.jpg" alt="carter">
+
+                        <p>Helena Bonham Carter</p>
+
+                    </div>
+
+                </div>
 
             </div>
-
         </div>
-
-        <div class="distribution" >
-
-            
-
-            <img src="assets/images/edward-norton.jpg" alt="norton">
-
-            <img src="assets/images/brad-pitt.jpg" alt="pitt">
-
-            <img src="assets/images/helena-b-c.jpg" alt="carter">
-
-        </div>
-
     </main>
 
-    <footer>
-        <div class="liens">
+    <footer class="footer">
 
-            <a href="index.html">Accueil</a>
+        <div class="texte-footer">
 
-            <a href="">Les films</a>
+            <h2>A propos</h2>
 
-            <a href="">Contact</a>
+            <br>
+            <p>Retrouvez-nous aussi sur les réseaux :</p>
+
+
+
+            <div class="reseaux">
+
+                <br><img src="assets/images/facebook.png" alt="facebook">
+
+                <img src="assets/images/Instagram.png" alt="instagram">
+
+                <img src="assets/images/twitter.png" alt="twitter">
+
+            </div>
 
         </div>
+
+        <div class="texte-footer2">
+
+            <h3>Qui sommes-nous ?</h3>
+            <br>
+            <h3>Que faisons-nous ?</h3>
+            <br>
+            <h3>FAQ</h3>
+            <br>
+            <h3>Contact</h3>
+
+        </div>
+
+
+
     </footer>
 
 </body>
