--- a/series.html
+++ b/series.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fan site</title>
+    <title>Séries</title>
     <link rel="stylesheet" href="assets/fansite.css">
 </head>
+<body>
 
-    <body>
+        <body class="series" >
 
     <header class="header">
 
@@ -37,7 +38,7 @@
         
         <a href="index.html">Accueil</a>
 
-        <a href="series.html">Les séries</a>
+        <a href="index.html">Les films</a>
 
         <a href="">Contact</a>
 
@@ -56,22 +57,22 @@
 
     <div class="affiche-accueil">
 
-        <a href="fight-club.html"><img src="assets/images/fight-club.jpg" alt="fight-club">
+        <a href="#"><img src="assets/images/séries/vikings.jpg" alt="vikings">
         </a>
 
-        <a href="la-ligne-verte.html"> <img src="assets/images/la-ligne-verte.jpg" alt="la-ligne-verte">
+        <a href="#"> <img src="assets/images/séries/game-of-thrones.jpg" alt="game-of-thrones">
         </a>
 
-        <a href="scarface.html"><img src="assets/images/scarface.jpg" alt="scarface">
+        <a href="#"><img src="assets/images/séries/breaking-bad.jpg" alt="breaking-bad">
         </a>
 
-        <a href="pulp-fiction.html"><img src="assets/images/pulp-fiction.jpg" alt="pulp-fiction">
+        <a href="#"><img src="assets/images/séries/friends.jpg" alt="friends">
         </a>
 
-        <a href="edward-aux-mains-dargent.html"><img src="assets/images/edward.jpg" alt="edward-aux-mains-dargent">
+        <a href="#"><img src="assets/images/séries/big-bang-theory.jpg" alt="big-bang-theory">
         </a>
 
-        <a href="psychose.html"><img src="assets/images/psychose.jpg" alt="psychose">
+        <a href="#"><img src="assets/images/séries/handmaids-tail.jpg" alt="handmaids-tale">
         </a>
 
     </div>
@@ -116,6 +117,6 @@
     </div>
 
 </body>
-
-
+    
+</body>
 </html>
