--- a/series.html
+++ b/series.html
@@ -10,7 +10,7 @@
 
         <body class="series" >
 
-    <header class="header">
+    <header class="header2">
 
         <div class="texte-header" >
     
@@ -34,7 +34,7 @@
 
 
 
-    <nav class="liens" >
+    <nav class="liens2" >
         
         <a href="index.html">Accueil</a>
 
@@ -44,7 +44,7 @@
 
     </nav>
 
-    <div class="body">
+    <div class="body2">
 
     <main>
 
@@ -79,7 +79,7 @@
 
     </main>
 
-    <footer class="footer" >
+    <footer class="footer2" >
 
         <div class="texte-footer" >
 
