--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a href="pulp-fiction.html"><img src="assets/images/pulp-fiction.jpg" alt="pulp-fiction">
         </a>
 
-        <a href="edward-aux-mains-dargent.html"><img src="assets/images/edward.jpg" alt="edward-aux-mains-dargent">
+        <a href="edward-aux-mains-dargent"><img src="assets/images/edward.jpg" alt="edward-aux-mains-dargent">
         </a>
 
         <a href="psychose.html"><img src="assets/images/psychose.jpg" alt="psychose">
