--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,36 @@
 
     </nav>
 
+    <main class="contact" >
+
+        <section class="formulaire" >
+
+            <h1>Une question ? Contactez nous !</h1>
+
+            <div class="input-box" >
+            <input type="text" placeholder="Nom" >
+            </div>
+
+            <div class="input-box" >
+            <input type="text" placeholder="Prénom" >
+            </div>
+
+            <div class="input-box" >
+            <input type="text" placeholder="Adresse mail" >
+            </div>
+
+            <div class="input-box" >
+            <input type="text" placeholder="Mobile" >
+            </div>
+
+            <textarea rows="10" cols="47" name="message" id="message">Tapez votre message</textarea>
+
+            <button class="btn" >Envoyer</button>
+
+        </section>
+
+    </main>
+
 
 
         <footer class="footer" >
