--- a/series.html
+++ b/series.html
@@ -51,7 +51,7 @@
     <div class="background" >
 
             <div class="classique">
-        <h1>Les grands classiques du cinéma</h1>
+        <h1>Le meilleur des séries</h1>
         
     </div>
 
