--- a/series.html
+++ b/series.html
@@ -15,18 +15,6 @@
         <div class="texte-header" >
     
         <h1>La page des cinéphiles</h1> 
-
-        <div class="gif1" >
-
-        <img src="assets/images/vhs.gif" alt="projecteur">
-
-        </div>
-
-        <div class="gif" >
-
-            <img src="assets/images/projector-12630_256.gif" alt="projecteur">
-
-        </div>
         
         </div>
 
@@ -40,7 +28,7 @@
 
         <a href="index.html">Les films</a>
 
-        <a href="">Contact</a>
+        <a href="contact.html">Contact</a>
 
     </nav>
 
