qui-sommes-nous

--- a/contact.html
+++ b/contact.html
@@ -90,10 +90,10 @@
 
         <div class="texte-footer2" >
 
-            <h3>Qui sommes-nous ?</h3>
-            <br><h3>Que faisons-nous ?</h3>
-            <br><h3>FAQ</h3>
-            <br><h3>Contact</h3>
+            <a href="qui-sommes-nous.html">Qui sommes-nous ?</a>
+            <a href="que-faisons-nous.html">Que faisons-nous ?</a>
+            <a href="faq.html">F.A.Q</a>
+            <a href="contact.html">Contact</a>
 
         </div>
 
