--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -10,13 +10,16 @@
 
 <body class="fond-presentation">
 
-    <header class="header3">
+       <header class="header3">
 
-        <div class="texte-header">
+        <div class="texte-header3" >
 
-            <h1>La page des cinéphiles</h1>
+            <img src="assets/images/popcorn.png" alt="popcorn">
+    
+        <h1>La page des cinéphiles</h1> 
 
-
+            <img src="assets/images/popcorn.png" alt="popcorn">
+        
         </div>
 
     </header>
@@ -35,9 +38,9 @@
 
 
 
-        <div class="page-film">
+        <div class="page-presentation">
 
-            <div class="page-film-wrap">
+            <div class="page-film-wrap2">
 
                 <div class="texte-page-presentation">
                     <div class="bloc" >
