--- a/series.html
+++ b/series.html
@@ -10,11 +10,15 @@
 
         <body class="series" >
 
-    <header class="header2">
+       <header class="header2">
 
-        <div class="texte-header" >
+        <div class="texte-header2" >
+
+            <img src="assets/images/popcorn.png" alt="popcorn">
     
         <h1>La page des cinéphiles</h1> 
+
+            <img src="assets/images/popcorn.png" alt="popcorn">
         
         </div>
 
