--- a/fight-club.html
+++ b/fight-club.html
@@ -12,10 +12,14 @@
 
     <header class="header">
 
-        <div class="texte-header">
+        <div class="texte-header" >
 
-            <h1>La page des cinéphiles</h1>
+            <img src="assets/images/popcorn.png" alt="popcorn">
+    
+        <h1>La page des cinéphiles</h1> 
 
+            <img src="assets/images/popcorn.png" alt="popcorn">
+        
         </div>
 
     </header>
