--- a/pulp-fiction.html
+++ b/pulp-fiction.html
@@ -8,12 +8,16 @@
 </head>
 <body class="fond4" >
 
-        <header class="header">
+    <header class="header">
 
-        <div class="texte-header">
+        <div class="texte-header" >
 
-            <h1>La page des cinéphiles</h1>
+            <img src="assets/images/popcorn.png" alt="popcorn">
+    
+        <h1>La page des cinéphiles</h1> 
 
+            <img src="assets/images/popcorn.png" alt="popcorn">
+        
         </div>
 
     </header>
