--- a/la-ligne-verte.html
+++ b/la-ligne-verte.html
@@ -29,7 +29,7 @@
 
         <a href="series.html">Les séries</a>
 
-        <a href="">Contact</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <main>
