--- a/psychose.html
+++ b/psychose.html
@@ -31,7 +31,7 @@
 
         <a href="series.html">Les séries</a>
 
-        <a href="">Contact</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <main>
