--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,9 @@
 
         <a href="series.html">Les séries</a>
 
-        <a href="">Contact</a>
+        <a href="nouveautes.html">Les nouveautés</a>
+
+        <a href="contact.html">Contact</a>
 
     </nav>
 
