--- a/series.html
+++ b/series.html
@@ -32,6 +32,8 @@
 
         <a href="index.html">Les films</a>
 
+        <a href="nouveautes.html">Les nouveautés</a>
+
         <a href="contact.html">Contact</a>
 
     </nav>
