--- a/edward-aux-mains-dargent.html
+++ b/edward-aux-mains-dargent.html
@@ -31,6 +31,8 @@
 
         <a href="series.html">Les séries</a>
 
+        <a href="nouveautes.html">Les nouveautés</a>
+
         <a href="contact.html">Contact</a>
     </nav>
 
