--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
         <a href="series.html">Les séries</a>
 
+        <a href="nouveautes.html">Les nouveautés</a>
+
         <a href="contact.html">Contact</a>
 
     </nav>
