--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fan site</title>
     <link rel="stylesheet" href="assets/fansite.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -105,7 +106,6 @@
             <div class="texte-footer2">
 
                 <a href="qui-sommes-nous.html">Qui sommes-nous ?</a>
-                <a href="que-faisons-nous.html">Que faisons-nous ?</a>
                 <a href="faq.html">F.A.Q</a>
                 <a href="contact.html">Contact</a>
 
