--- a/nouveautes.html
+++ b/nouveautes.html
@@ -40,7 +40,7 @@
 
     <main>
 
-        <h2 class="classique-nouveaute" >Les grandes nouveautés du moment</h2>
+        <h2 class="classique-nouveaute">Les grandes nouveautés du moment</h2>
 
         <div class="page-nouveaute">
 
@@ -117,6 +117,39 @@
             </div>
 
         </div>
+
+        <div class="film">
+
+        <div class="video-nouveaute">
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/r8-484hD1NY?si=KjNESy9cydBj3RYL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        </div>
+
+        <div class="texte-nouveaute">
+
+            <h3 class="titre-nouveaute">Destination finale : Bloodlines</h3>
+
+            <h4>Synopsis</h4>
+
+            <p>Hantée par un cauchemar terrifiant qui revient sans cesse, Stefanie, étudiante à l'université, rentre chez elle pour retrouver la trace de la seule personne susceptible d'enrayer ce cycle infernal et de sauver ses proches du sort funeste qui les attend.</p>
+
+            <h4>Réalisation</h4>
+
+            <p>Zach Lipovsky, Adam B. Stein</p>
+
+            <h4>Distribution</h4>
+
+            <p>Tony Todd, Brec Bassinger, Teo Briones</p>
+
+            <h4>Date de sortie</h4>
+
+            <p>20 Août 2025</p>
+
+        </div>
+
+        </div>
+
 
         <div class="film">
 
@@ -227,7 +260,6 @@
         <div class="texte-footer2">
 
             <a href="qui-sommes-nous.html">Qui sommes-nous ?</a>
-            <a href="que-faisons-nous.html">Que faisons-nous ?</a>
             <a href="faq.html">F.A.Q</a>
             <a href="contact.html">Contact</a>
 
